--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exomine</title>
-    <link rel="stylesheet" href="./styles/main.css">
 </head>
-<body class="container">
+<body>
 
-    <script src="./scripts/main.js" type="module"></script>
 </body>
 </html>
